--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <img
           class="logo logo_place_header"
           src="./images/logo_place_header.svg"
-          alt="логотип"
-         >
+          alt="логотип Яндекс Практикум"
+        >
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
@@ -24,8 +24,8 @@
           class="header__main-illustration"
           src="./images/header-image.png"
           alt="Картина Федора Решетникова"
-          >         
-        <div class="header__square-pic"></div>
+        >
+        <div class="header__square-pic rotation"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -55,92 +55,106 @@
         <section class="techniques">
           <h2 class="section-title">Техники обучения</h2>
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-          <div class="cards">
-            <div class="cards__item">
-              <img 
+          <ul class="cards">
+            <li class="cards__item">
+              <img
                 class="cards__image"
                 src="./images/cards-attention.png"
                 alt="фотография книги Брианна Виста"
               >
               <h3 class="cards__title">Два вида внимания</h3>
               <p class="cards__description">
-                Глубокие знания возникают, если чередовать
-                сфокусированное и рассеянное мышление.</p>
-            </div>
-            <div class="cards__item">
-              <img 
+                Глубокие знания возникают, если чередовать сфокусированное и
+                рассеянное мышление.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
                 class="cards__image"
                 src="./images/cards-recall.png"
                 alt="античная скульптура мальчика"
               >
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">
-                Вспоминайте изученное — это позволит соединить
-                разрозненные порции памяти.</p>
-            </div>
-            <div class="cards__item">
-              <img 
+                Вспоминайте изученное — это позволит соединить разрозненные
+                порции памяти.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
                 class="cards__image"
                 src="./images/cards-interliving.png"
                 alt="фотография Всемирного торгового центра"
-              >                      
+              >
               <h3 class="cards__title">Интерливинг</h3>
               <p class="cards__description">
-                Изучайте несколько навыков одновременно, 
-                они обогащают друг друга.</p>
-            </div>
-            <div class="cards__item">
-              <img 
+                Изучайте несколько навыков одновременно, они обогащают друг
+                друга.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
                 class="cards__image"
                 src="./images/cards-question.png"
                 alt="фотография городской библиотеки Штутгарта "
-              >           
+              >
               <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">
-                Слушая преподавателя, придумывайте хороший вопрос, 
-                который вас действительно волнует.</p>
-            </div>
-            <div class="cards__item">
-              <img 
+                Слушая преподавателя, придумывайте хороший вопрос, который вас
+                действительно волнует.
+              </p>
+            </li>
+            <li class="cards__item">
+              <img
                 class="cards__image"
                 src="./images/cards-competence.png"
                 alt="фотография книг на руке"
-                >          
+              >
               <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">
-                Повторите про себя, запишите, расскажите другу: 
-                вам только кажется, что вы владеете новой темой.</p>
-            </div>           
-          </div>
+                Повторите про себя, запишите, расскажите другу: вам только
+                кажется, что вы владеете новой темой.
+              </p>
+            </li>
+          </ul>
         </section>
         <section class="video">
           <h2 class="section-title">Видео нa TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes"> 
-          <iframe class="video__iframe"            
-                  src="https://www.youtube.com/embed/arj7oStGLkU"
-                  allowfullscreen
-                  title="выступление Тима Урбана">
-          </iframe>
-          <iframe class="video__iframe"                  
-                  src="https://www.youtube.com/embed/5MgBikgcWnY"
-                  allowfullscreen
-                  title="выступление Джоша Кауфмана">
-           </iframe>
-        </div>
+          <ul class="video__iframes">
+            <li>
+              <iframe
+                class="video__iframe"
+                src="https://www.youtube.com/embed/arj7oStGLkU"
+                allowfullscreen
+                title="выступление Тима Урбана"
+              >
+              </iframe>
+            </li>
+            <li>
+              <iframe
+                class="video__iframe"
+                src="https://www.youtube.com/embed/5MgBikgcWnY"
+                allowfullscreen
+                title="выступление Джоша Кауфмана"
+              >
+              </iframe>
+            </li>
+          </ul>
         </section>
         <section class="oakley">
           <article class="two-columns">
             <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
-                С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, 
-                причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, 
-                да так успешно, что её выдвинули в командиры. 
-                Но для продвижения по службе нужно было сдавать математику. 
-                И тогда Барбара придумала свой подход к точным наукам. 
-                Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, 
-                чем у тех, кому всё ясно с первого взгляда.
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
               </p>
             </div>
           </article>
@@ -148,7 +162,7 @@
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="link feynman__link">Подробнее &rarr;</a>        
+          <a href="#" class="link feynman__link">Подробнее &rarr;</a>
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -202,24 +216,27 @@
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
-            <p class="khan__quote">
-              Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. 
-              Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — 
-              так учащиеся повсюду смогут получить навыки и знания, к
-              оторые приносят успех в школе, карьере и жизни.</p>
+            <blockquote class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, к оторые приносят успех в школе, карьере
+              и жизни.
+            </blockquote>
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
-              <img class="khan__book-pic"
-                   src="./images/khan-book.jpg"
-                   alt="обложка книги Салмана Хана"
-                   >
+              <img
+                class="khan__book-pic"
+                src="./images/khan-book.jpg"
+                alt="обложка книги Салмана Хана"
+              >
               <a href="#" class="link khan__buy-link">Купить книгу &rarr;</a>
             </div>
           </div>
         </section>
         <section class="kaufman">
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
           <h2 class="section-title section-title_theme_dark">
             Принципы обучения
           </h2>
@@ -293,30 +310,43 @@
         </section>
         <section class="resources">
           <h2 class="section-title">Полезные ресурсы</h2>
-          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-          <div class="resources__logo-zone">
-            <div class="link resources__link">
-              <a href="#" class="resources__logo">
-                <img src="./images/logo/resources-arzamas.svg"
-                 alt="логотип"></a>
-            </div>
-            <div class="link resources__link">
-              <a href="#" class="resources__logo">
-                <img src="./images/logo/resources-n1.svg"
-                 alt="логотип"></a>
-            </div>
-            <div class="link resources__link">
-              <a href="#" class="resources__logo">
-                <img src="./images/logo/resources-strelka.svg"
-                 alt="логотип"></a>
-            </div>
-            <div class="link resources__link">
-              <a href="#" class="resources__logo">
-                <img src="./images/logo/resources-polka.svg"
-                 alt="логотип"></a>
-            </div>
-          </div>
-
+          <p class="section-subtitle">
+            Больше материалов о техниках и лайфхаках обучения
+          </p>
+          <ul class="resources__logo-zone">
+            <li>
+              <a href="#">
+                <img
+                  src="./images/logo/resources-arzamas.svg"
+                  class="link resources__logo"
+                  alt="курсы арзамас"
+              ></a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/logo/resources-n1.svg"
+                  class="link resources__logo"
+                  alt="главное издание о науке, технике и технологиях"
+              ></a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/logo/resources-strelka.svg"
+                  class="link resources__logo"
+                  alt="Институт Стрелка"
+              ></a>
+            </li>
+            <li>
+              <a href="#">
+                <img
+                  src="./images/logo/resources-polka.svg"
+                  class="link resources__logo"
+                  alt="образовательный проект полка"
+              ></a>
+            </li>
+          </ul>
         </section>
       </main>
       <footer class="footer">
@@ -325,20 +355,20 @@
             <img
               class="logo logo_place_footer"
               src="./images/logo_place_footer.svg"
-              alt="логотип"
+              alt="логотип Яндекс Практикум"
             >
             <p class="footer__author">© Виктор Абанькин</p>
-          </div>    
+          </div>
           <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
             <nav class="footer__column-menu">
               <ul class="footer__column-links">
                 <li>
                   <a href="#" class="link footer__column-link">Главная</a>
-                </li>             
+                </li>
                 <li>
                   <a href="#" class="link footer__column-link">Концепция</a>
-                </li>                     
+                </li>
                 <li>
                   <a href="#" class="link footer__column-link">Наставники</a>
                 </li>
@@ -346,34 +376,37 @@
             </nav>
           </div>
           <div class="footer__column footer__column_content_social">
-             <h2 class="footer__column-heading">Соцсети</h2>
-             <ul class="footer__column-links">
-                <li>
-                   <a href="#" class="link footer__column-link">
-                     <img
-                       class="footer__social-icon"
-                       src="./images/youtube-icon.svg"
-                       alt="логотип YouTube"
-                    >YouTube</a>                   
-                 </li>                          
-                 <li>
-                  <a href="#" class="link footer__column-link">
-                    <img
-                      class="footer__social-icon"
-                      src="./images/vk_color_white.svg"
-                      alt="логотип ВКонтакте"
-                   >ВКонтакте</a>                  
-                 </li>              
-                 <li>
-                   <a href="#" class="link footer__column-link">
-                     <img
-                       class="footer__social-icon"
-                       src="./images/tiktok-icon.svg"
-                       alt="логотип TikTok"                    
-                   >TikTok</a>
-                </li>            
-              </ul>
-          </div>        
+            <h2 class="footer__column-heading">Соцсети</h2>
+            <ul class="footer__column-links">
+              <li>
+                <a href="#" class="link footer__column-link">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/youtube-icon.svg"
+                    alt="логотип социальной сети ютюб"
+                  >YouTube</a
+                >
+              </li>
+              <li>
+                <a href="#" class="link footer__column-link">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/vk_color_white.svg"
+                    alt="логотип социальной сети ВКонтакте"
+                  >ВКонтакте</a
+                >
+              </li>
+              <li>
+                <a href="#" class="link footer__column-link">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/tiktok-icon.svg"
+                    alt="логотип социальной сети титок"
+                  >TikTok</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
